fix: hide sidebar collapse button on small screen

--- a/Client/Shared/MainLayout.razor.css
+++ b/Client/Shared/MainLayout.razor.css
@@ -48,6 +48,10 @@ main {
     .top-row ::deep a, .top-row ::deep .btn-link {
         margin-left: 0;
     }
+
+    .no-small-screen {
+        display: none;
+    }
 }
 
 @media (min-width: 641px) {
